stubbing out ways to fix app height causing vertical scrolling on mobile

--- a/src/About/styles.module.css
+++ b/src/About/styles.module.css
@@ -2,7 +2,8 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    padding-top: 51px;
+    align-items: center;
+    padding-top: 54px;
 }
 
 .textContainer {
